# bitloops-embeddings

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/bitloops-platform-embeddings/: Cargo.toml
crates/bitloops-platform-embeddings/src/: lib.rs  main.rs
scripts/: package_platform_release.py  package_release.py  real_backend_smoke.py  release.sh
src/bitloops_embeddings/: __main__.py  cache.py  cli.py  daemon.py  errors.py  logging_utils.py  registry.py  server.py
src/bitloops_embeddings/backend/: __init__.py  base.py  sentence_transformers_backend.py
src/bitloops_local_embeddings/: __main__.py  cache.py  cli.py  daemon.py  logging_utils.py  models.py  registry.py  server.py
src/bitloops_local_embeddings/backend/: base.py  sentence_transformers_backend.py
tests/: __init__.py  conftest.py  daemon_harness.py  support.py
tests/integration/: test_cli.py  test_daemon.py  test_server.py
tests/protocol_fixtures/: embed_request.json  embed_response.json  health_request.json  health_response.json  ping_request.json  ping_response.json  ready_event.json  shutdown_request.json  shutdown_response.json
tests/unit/: test_cache.py  test_cli_failures.py  test_cli_logging.py  test_daemon_protocol.py  test_logging_utils.py  test_main_entrypoint.py  test_models.py  test_registry.py  test_sentence_transformers_backend.py
