[workspace]
members = ["crates/bitloops-platform-embeddings"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
authors = ["Bitloops"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
