[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bitloops-local-embeddings"
description = "Managed local embeddings runtime for Bitloops"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Bitloops" },
]
requires-python = ">=3.11,<3.13"
dynamic = ["version"]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "numpy>=1.26.0,<2.0.0",
  "platformdirs>=4.3.0,<5.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "sentence-transformers>=3.1.0,<4.0.0",
  "transformers>=4.41.0,<4.52.0",
  "typer>=0.12.5,<1.0.0",
  "uvicorn>=0.30.6,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2,<1.0.0",
  "pyinstaller>=6.11.0,<7.0.0",
  "pytest>=8.3.3,<9.0.0",
]

[project.scripts]
bitloops-local-embeddings = "bitloops_local_embeddings.cli:main"

[tool.hatch.version]
path = "src/bitloops_local_embeddings/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bitloops_local_embeddings"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
